<resources>
    <string name="app_name">My Application</string>
    <string name="title_cars">Coches</string>
    <string name="title_search">Buscar</string>
    <string name="title_likes">Guardados</string>
    <string name="title_profile">Perfil</string>
    <string name="title_Sedan">Sedan</string>
    <string name="title_Pick_Up">Pick Up</string>
    <string name="title_SUV">SUV</string>
    <string name="title_Hatch_back">Hatch Back</string>
    <string name="title_Otros">Otros</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>