<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".ui.cars.CarsFragment">

    <LinearLayout
        android:id="@+id/layout_car"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/sedan_text_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/cutom"
            android:drawableLeft="@mipmap/ic_launcher_foreground"
            android:fontFamily="@font/bebas_neue"
            android:gravity="top"
            android:paddingHorizontal="20dp"
            android:text="@string/title_Sedan"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:autoSizeTextType="uniform" />

        <Button
            android:id="@+id/text_pic_up_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/cutom"
            android:fontFamily="@font/bebas_neue"
            android:gravity="top"
            android:paddingHorizontal="20dp"
            android:text="@string/title_SUV"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:autoSizeTextType="uniform" />
        <Button
            android:paddingHorizontal="20dp"
            android:id="@+id/text_suv_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/cutom"
            android:fontFamily="@font/bebas_neue"
            android:gravity="top"
            android:text="@string/title_SUV"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:autoSizeTextType="uniform" />

        <Button
            android:paddingHorizontal="10dp"
            android:id="@+id/text_hatch_back_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/cutom"
            android:fontFamily="@font/bebas_neue"
            android:gravity="top"
            android:text="@string/title_Hatch_back"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:autoSizeTextType="uniform" />

        <Button
            android:paddingHorizontal="20dp"
            android:id="@+id/text_otros_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/cutom"
            android:fontFamily="@font/bebas_neue"
            android:gravity="top"
            android:text="@string/title_Otros"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:autoSizeTextType="uniform" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>